M4 去耦合：env.py 纯 Python maven 发现+jacov.toml 配置；runner 去 bash 直调 mvn（双层引号过空格路径）；剔除 IDEA 集成参数；entry points/CI/.gitattributes